instructions or use the OBS Appliance from

  http://openbuildservice.org/download/

There is also an install medium with installs OBS on hard disc now.

dist/README.UPDATERS file has informations for updaters.

OBS Appliance users who have setup their LVM can just replace
their appliance image without data loss. The migration will
happen automatically.


Features
========

UI:
 * Kerberos authentication mode. Allow OBS admins to setup their instance for
   kerberos authentication. Read more in the OBS Admin Guide.
 * Users can see the job history list of a specific package via the package binaries page
 * New GPG key details dialog
 * RSS Feeds for User's Notifications is now available
 * Kiwi image editor feature:
   * Repositories of a kiwi file can be updated. Also the packages list.
   * A basic and expert mode for adding repositories is available.
   * obsrepositories:/ source_path can be added easily using 'use project repositories' checkbox.
   * Only `apt-deb` and `rpm-md` are allowed as repo_type. Other values will be replaced by `rpm-md`.
   * Added autocompletion for binary packages names.
   * Kiwi Editor tab now appears as "Image Editor", the rest of the tabs are under "Advanced".
   * After an image template is branched the user will be redirected to the Image Editor.
 * Job history: 'source change' rows now link to the diff
 * RabbitMQ support. OBS admins can configure their instance to send messages to a RabbitMQ server.
   Read more in the OBS Admin Guide.
 * Receive email notifications for projects that are in your watchlist. Configure at /user/notifications.

API:
 * Kerberos authentication mode
 * api_relative_url_root option was removed

Backend:
 * support showing source files in blame view (works also via links)
 * support project copy with makeoriginolder option

Shipment:
 *

Bugfixes:
 * Deletion of groups with users was not working
 * Fixed generation of the breadcrumb for the Image Editor (Kiwi)

Wanted changes:
===============
